# pyembed_downloader

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
gui/: Cargo.toml  build.rs
gui/res/: app.manifest  app.rc
gui/src/: dialog.rs  downloaddlg.rs  logger.rs  main.rs  maindlg.rs  resources.rs
pyembed_downloader/: Cargo.toml
pyembed_downloader/src/: config.rs  lib.rs  utility.rs
src/: main.rs  native.rs
