[package]
name = "pyembed_downloader_cli"
version = "0.1.7"
authors = ["wzv5 <wzv5@msn.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4"
tokio = { version = "1.5", features = ["rt-multi-thread", "macros"] }
log = "0.4"
clap = "2.33"
atty = "0.2"
pyembed_downloader = { path = "../pyembed_downloader" }
