[package]
name = "pyembed_downloader_cli"
version = "0.2.1"
authors = ["wzv5 <wzv5@msn.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7"
tokio = { version = "1.25", features = ["rt-multi-thread", "macros"] }
log = "0.4"
clap = { version = "4.1", features = ["cargo"] }
atty = "0.2"
pyembed_downloader = { path = "../pyembed_downloader" }
