[package]
name = "pyembed_downloader_gui"
version = "0.1.3"
authors = ["wzv5 <wzv5@msn.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.0"
tokio = "0.2.22"
log = "0.4.11"
wfd = "0.1.4"
pyembed_downloader = { path = "../pyembed_downloader" }

[dependencies.winapi]
version = "0.3.9"
features = [
    "winuser",
    "libloaderapi",
    "commctrl",
    "shellapi",
    "windef",
    "basetsd"
]

[build-dependencies]
embed-resource = "1.3.3"
