[package]
name = "pyembed_downloader_gui"
version = "0.1.6"
authors = ["wzv5 <wzv5@msn.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4"
tokio = { version = "1.2", features = ["rt-multi-thread"] }
log = "0.4"
wfd = "0.1"
pyembed_downloader = { path = "../pyembed_downloader" }

[dependencies.winapi]
version = "0.3"
features = [
    "winuser",
    "libloaderapi",
    "commctrl",
    "shellapi",
    "windef",
    "basetsd",
    "shobjidl_core",
    "combaseapi",
    "unknwnbase"
]

[build-dependencies]
embed-resource = "1.6"
