[package]
name = "pyembed_downloader"
version = "0.1.3"
authors = ["wzv5 <wzv5@msn.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["stream"] }
regex = "1.4"
tokio = "0.2"
bytes = "0.5"
md5 = "0.7"
zip = "0.5"
log = "0.4"

[dependencies.winapi]
version = "0.3"
features = [
    "winnt",
    "jobapi2",
    "minwindef",
    "processthreadsapi",
    "winuser",
    "wincon"
]
